<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_gravity="center"
            android:layout_margin="23dp"
            android:text="@string/_7am" />

        <TextView
            android:layout_gravity="center"
            android:layout_margin="23dp"
            android:text="@string/_8am" />

        <TextView
            android:layout_gravity="center"
            android:layout_margin="23dp"
            android:text="@string/_9am" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_hour_0"
            android:layout_gravity="center"
            android:layout_margin="23dp"
            android:hint="@string/_0" />

        <TextView
            android:id="@+id/tv_hour_1"
            android:layout_gravity="center"
            android:layout_margin="23dp"
            android:hint="@string/_0" />

        <TextView
            android:id="@+id/tv_hour_2"
            android:layout_gravity="center"
            android:layout_margin="23dp"
            android:hint="@string/_0" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_gravity="center"
            android:layout_margin="23dp"
            android:text="@string/_10am" />

        <TextView
            android:layout_gravity="center"
            android:layout_margin="23dp"
            android:text="@string/_11am" />

        <TextView
            android:layout_gravity="center"
            android:layout_margin="23dp"
            android:text="@string/_12pm" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_hour_3"
            android:layout_gravity="center"
            android:layout_margin="23dp"
            android:hint="@string/_0" />

        <TextView
            android:id="@+id/tv_hour_4"
            android:layout_gravity="center"
            android:layout_margin="23dp"
            android:hint="@string/_0" />

        <TextView
            android:id="@+id/tv_hour_5"
            android:layout_gravity="center"
            android:layout_margin="23dp"
            android:hint="@string/_0" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_gravity="center"
            android:layout_margin="23dp"
            android:text="@string/_1pm" />

        <TextView
            android:layout_gravity="center"
            android:layout_margin="23dp"
            android:text="@string/_2pm" />

        <TextView
            android:layout_gravity="center"
            android:layout_margin="23dp"
            android:text="@string/_3pm" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_hour_6"
            android:layout_gravity="center"
            android:layout_margin="23dp"
            android:hint="@string/_0" />

        <TextView
            android:id="@+id/tv_hour_7"
            android:layout_gravity="center"
            android:layout_margin="23dp"
            android:hint="@string/_0" />

        <TextView
            android:id="@+id/tv_hour_8"
            android:layout_gravity="center"
            android:layout_margin="23dp"
            android:hint="@string/_0" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_gravity="center"
            android:layout_margin="23dp"
            android:text="@string/_4pm" />

        <TextView
            android:layout_gravity="center"
            android:layout_margin="23dp"
            android:text="@string/_5pm" />

        <TextView
            android:layout_gravity="center"
            android:layout_margin="23dp"
            android:text="@string/_6pm" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_hour_9"
            android:layout_gravity="center"
            android:layout_margin="23dp"
            android:hint="@string/_0" />

        <TextView
            android:id="@+id/tv_hour_10"
            android:layout_gravity="center"
            android:layout_margin="23dp"
            android:hint="@string/_0" />

        <TextView
            android:id="@+id/tv_hour_11"
            android:layout_gravity="center"
            android:layout_margin="23dp"
            android:hint="@string/_0" />
    </TableRow>

</TableLayout>