<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tv_total_pods_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="36dp"
        android:text="@string/total_pods"
        android:textColor="@color/white_text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_total_owed_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_total_pods_label"
        android:layout_marginTop="20dp"
        android:text="@string/total_owed"
        android:textColor="@color/white_text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_total_owed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_total_owed_label"
        android:layout_alignBottom="@+id/tv_total_owed_label"
        android:layout_alignLeft="@+id/tv_total_pods"
        android:layout_alignStart="@+id/tv_total_pods"
        android:hint="@string/_0_00"
        android:textColor="@color/white_text"
        android:textColorHint="@color/white_text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_total_pods"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_total_pods_label"
        android:layout_alignBottom="@+id/tv_total_pods_label"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_toEndOf="@+id/tv_total_owed_label"
        android:layout_toRightOf="@+id/tv_total_owed_label"
        android:width="30dp"
        android:hint="@string/_0"
        android:textColor="@color/white_text"
        android:textColorHint="@color/white_text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_last_month_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_total_owed_label"
        android:layout_marginTop="36dp"
        android:text="@string/last_month"
        android:textColor="@color/white_text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_last_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_last_month_label"
        android:layout_alignBottom="@+id/tv_last_month_label"
        android:layout_alignLeft="@+id/tv_total_owed"
        android:layout_alignStart="@+id/tv_total_owed"
        android:width="30dp"
        android:hint="@string/_0"
        android:textColor="@color/white_text"
        android:textColorHint="@color/white_text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_current_month_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_last_month_label"
        android:layout_marginTop="20dp"
        android:text="@string/current_month"
        android:textColor="@color/white_text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_current_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_current_month_label"
        android:layout_alignBottom="@+id/tv_current_month_label"
        android:layout_alignLeft="@+id/tv_last_month"
        android:layout_alignStart="@+id/tv_last_month"
        android:width="30dp"
        android:hint="@string/_0"
        android:textColor="@color/white_text"
        android:textColorHint="@color/white_text"
        android:textSize="18sp" />

</RelativeLayout>
